JSON Serializer should be cleaned up. Case: SVY-2899