@@ -37,7 +37,9 @@ import org.mozilla.javascript.NativeObject;
 import org.mozilla.javascript.Scriptable;
 import org.mozilla.javascript.Undefined;
 
+import com.servoy.j2db.scripting.JSList;
 import com.servoy.j2db.scripting.JSMap;
+import com.servoy.j2db.util.Utils;
 
 
 /**
@@ -51,38 +53,22 @@ public class NativeObjectSerializer extends AbstractSerializer
 
 	private static final String PROPERTY_MARK = "_"; //$NON-NLS-1$
 
-	private static Class[] _serializableClassesStandard = new Class[] { NativeObject.class, NativeObject[].class, NativeArray.class };
-	private static Class[] _serializableClassesWithArrays = new Class[] { NativeObject.class, NativeObject[].class, NativeArray.class, List.class, ArrayList.class, LinkedList.class, Vector.class };
+	private static Class[] _serializableClasses = new Class[] { NativeObject.class, NativeObject[].class, NativeArray.class, List.class, ArrayList.class, LinkedList.class, Vector.class };
 
-	private static Class[] _JSONClassesStandard = new Class[] { JSONObject.class };
-	private static Class[] _JSONClassesWithArrays = new Class[] { JSONObject.class, JSONArray.class };
+	private static Class[] _JSONClasses = new Class[] { JSONObject.class, JSONArray.class };
 
-	private final boolean prefixKeys;
-
-	private final boolean addJavaClassHint;
-
-	private final boolean handleListsAsArrays;
-
-	public NativeObjectSerializer(boolean prefixKeys, boolean addJavaClassHint)
+	public NativeObjectSerializer()
 	{
-		this(prefixKeys, addJavaClassHint, false);
-	}
-
-	public NativeObjectSerializer(boolean prefixKeys, boolean addJavaClassHint, boolean handleArrays)
-	{
-		this.prefixKeys = prefixKeys;
-		this.addJavaClassHint = addJavaClassHint;
-		this.handleListsAsArrays = handleArrays;
 	}
 
 	public Class[] getJSONClasses()
 	{
-		return handleListsAsArrays ? _JSONClassesWithArrays : _JSONClassesStandard;
+		return _JSONClasses;
 	}
 
 	public Class[] getSerializableClasses()
 	{
-		return handleListsAsArrays ? _serializableClassesWithArrays : _serializableClassesStandard;
+		return _serializableClasses;
 	}
 
 	public Object marshall(SerializerState state, Object parent, Object o) throws MarshallException
@@ -92,49 +78,38 @@ public class NativeObjectSerializer extends AbstractSerializer
 			throw new MarshallException("cannot marshall NativeObject using class " + o.getClass()); //$NON-NLS-1$
 		}
 
-		if (handleListsAsArrays)
+		if (o instanceof NativeArray)
 		{
-			if (o instanceof NativeArray)
+			NativeArray nativeArray = (NativeArray)o;
+			JSONArray jsonArray = new JSONArray();
+			long length = nativeArray.getLength();
+
+			for (int i = 0; i < length; i++)
 			{
-				NativeArray nativeArray = (NativeArray)o;
-				JSONArray jsonArray = new JSONArray();
-				long length = nativeArray.getLength();
-
-				for (int i = 0; i < length; i++)
-				{
-					Object elem = nativeArray.get(i, nativeArray);
-					jsonArray.put(ser.marshall(state, o, elem == Scriptable.NOT_FOUND ? null : elem, new Integer(i)));
-				}
-				return jsonArray;
+				Object elem = nativeArray.get(i, nativeArray);
+				jsonArray.put(ser.marshall(state, o, elem == Scriptable.NOT_FOUND ? null : elem, new Integer(i)));
 			}
+			return jsonArray;
+		}
 
-			if (o instanceof List< ? >)
+		if (o instanceof List< ? >)
+		{
+			List< ? > list = (List< ? >)o;
+			JSONArray jsonArray = new JSONArray();
+			long length = list.size();
+
+			for (int i = 0; i < length; i++)
 			{
-				List< ? > list = (List< ? >)o;
-				JSONArray jsonArray = new JSONArray();
-				long length = list.size();
-
-				for (int i = 0; i < length; i++)
-				{
-					Object elem = list.get(i);
-					jsonArray.put(ser.marshall(state, o, elem, new Integer(i)));
-				}
-				return jsonArray;
+				Object elem = list.get(i);
+				jsonArray.put(ser.marshall(state, o, elem, new Integer(i)));
 			}
+			return jsonArray;
 		}
 
 		// else NativeObject
 
 		IdScriptableObject no = (IdScriptableObject)o;
 		JSONObject obj = new JSONObject();
-		try
-		{
-			if (addJavaClassHint && ser.getMarshallClassHints()) obj.put("javaClass", o.getClass().getName()); //$NON-NLS-1$
-		}
-		catch (JSONException e)
-		{
-			throw new MarshallException("JSONException: " + e.getMessage(), e); //$NON-NLS-1$
-		}
 
 		Object[] noIDs = no.getIds();
 		String propertyKey;
@@ -164,7 +139,7 @@ public class NativeObjectSerializer extends AbstractSerializer
 			propertyValue = JSONSerializerWrapper.wrapToJSON(propertyValue);
 			try
 			{
-				obj.put(prefixKeys ? (PROPERTY_MARK + propertyKey) : propertyKey, ser.marshall(state, o, propertyValue, propertyKey));
+				obj.put(propertyKey, ser.marshall(state, o, propertyValue, propertyKey));
 			}
 			catch (JSONException e)
 			{
@@ -179,34 +154,18 @@ public class NativeObjectSerializer extends AbstractSerializer
 	@SuppressWarnings("nls")
 	public ObjectMatch tryUnmarshall(SerializerState state, Class clazz, Object json) throws UnmarshallException
 	{
-		if (json instanceof JSONArray)
+		if (json instanceof JSONArray || json instanceof JSONObject)
 		{
 			return ObjectMatch.OKAY;
 		}
 
-		// else JSONObject
-
-		JSONObject jso = (JSONObject)json;
-		try
-		{
-			String java_class = jso.getString("javaClass"); //$NON-NLS-1$
-
-			if (java_class == null) throw new UnmarshallException("no type hint"); //$NON-NLS-1$
-			if (!(java_class.equals("org.mozilla.javascript.NativeObject") || java_class.equals("org.mozilla.javascript.NativeArray"))) throw new UnmarshallException(
-				"not a NativeObject");
-
-			return ObjectMatch.OKAY;
-		}
-		catch (JSONException e)
-		{
-			throw new UnmarshallException("JSONException: " + e.getMessage(), e); //$NON-NLS-1$
-		}
+		throw new UnmarshallException("not a NativeObject");
 	}
 
 	@SuppressWarnings("nls")
 	public Object unmarshall(SerializerState state, Class clazz, Object json) throws UnmarshallException
 	{
-		if (handleListsAsArrays && json instanceof JSONArray)
+		if (json instanceof JSONArray)
 		{
 			return unmarshallJSONArray(state, (JSONArray)json);
 		}
@@ -228,68 +187,43 @@ public class NativeObjectSerializer extends AbstractSerializer
 
 	public Object unmarshallJSONObject(SerializerState state, Class clazz, JSONObject jso) throws UnmarshallException
 	{
-		if (jso.has("javaClass")) //$NON-NLS-1$
+		boolean hasJavaClass = jso.has("javaClass"); // legacy, remove prefixes
+
+		JSMap<Object, Object> no = new JSMap<Object, Object>(NativeArray.class.equals(clazz) ? "Array" : null);
+		for (String jsonKey : Utils.iterate((Iterator<String>)jso.keys()))
 		{
+			String jsonProperty = jsonKey;
+			if (hasJavaClass)
+			{
+				// legacy
+				if (jsonKey.equals("javaClass")) continue;
+
+				if (jsonKey.startsWith(PROPERTY_MARK))
+				{
+					jsonProperty = jsonKey.substring(PROPERTY_MARK.length());
+				}
+			}
+
+			Object jsonValue;
 			try
 			{
-				clazz = Class.forName(jso.getString("javaClass")); //$NON-NLS-1$
-			}
-			catch (ClassNotFoundException cnfe)
-			{
-				throw new UnmarshallException(cnfe.getMessage());
+				jsonValue = jso.get(jsonKey);
 			}
 			catch (JSONException e)
 			{
 				throw new UnmarshallException("JSONException: " + e.getMessage(), e); //$NON-NLS-1$
 			}
-		}
 
-		if (!(NativeObject.class.equals(clazz) || NativeArray.class.equals(clazz)))
-		{
-			throw new UnmarshallException("invalid class " + clazz); //$NON-NLS-1$
-		}
-
-		String name = null;
-		if (NativeArray.class.equals(clazz)) name = "Array";
-		JSMap no = new JSMap(name);
-		Iterator<String> jsonKeysIte = jso.keys();
-		String jsonKey, jsonProperty;
-		Object jsonValue;
-		boolean hasPropertyMark = prefixKeys && hasPropertyMark(jso);
-		while (jsonKeysIte.hasNext())
-		{
-			jsonKey = jsonKeysIte.next();
-			if (jsonKey.equals("javaClass")) continue;
-			if (!hasPropertyMark || jsonKey.startsWith(PROPERTY_MARK))
+			jsonValue = getUnmarshalled(state, jsonValue);
+			try
 			{
-				if (prefixKeys && jsonKey.startsWith(PROPERTY_MARK))
-				{
-					jsonProperty = jsonKey.substring(PROPERTY_MARK.length());
-				}
-				else
-				{
-					jsonProperty = jsonKey;
-				}
-				try
-				{
-					jsonValue = jso.get(jsonKey);
-				}
-				catch (JSONException e)
-				{
-					throw new UnmarshallException("JSONException: " + e.getMessage(), e); //$NON-NLS-1$
-				}
-
-				jsonValue = getUnmarshalled(state, jsonValue);
-				try
-				{
-					int jsonIntKey = Integer.parseInt(jsonProperty);
-					no.put(new Integer(jsonIntKey), jsonValue);
-				}
-				catch (NumberFormatException ex)
-				{
-					// property key is a string
-					no.put(jsonProperty, jsonValue);
-				}
+				int jsonIntKey = Integer.parseInt(jsonProperty);
+				no.put(Integer.valueOf(jsonIntKey), jsonValue);
+			}
+			catch (NumberFormatException ex)
+			{
+				// property key is a string
+				no.put(jsonProperty, jsonValue);
 			}
 		}
 
@@ -299,9 +233,8 @@ public class NativeObjectSerializer extends AbstractSerializer
 
 	public Object unmarshallJSONArray(SerializerState state, JSONArray jso) throws UnmarshallException
 	{
-		JSMap no = new JSMap("Array");
-
 		int length = jso.length();
+		JSList<Object> no = new JSList<Object>(length);
 		for (int i = 0; i < length; i++)
 		{
 			Object jsonValue;
@@ -314,9 +247,7 @@ public class NativeObjectSerializer extends AbstractSerializer
 				throw new UnmarshallException("JSONException: " + e.getMessage(), e); //$NON-NLS-1$
 			}
 
-			jsonValue = getUnmarshalled(state, jsonValue);
-
-			no.put(new Integer(i), jsonValue);
+			no.add(getUnmarshalled(state, jsonValue));
 		}
 
 		return no;
@@ -367,22 +298,5 @@ public class NativeObjectSerializer extends AbstractSerializer
 			unmarshalled = jsonValue;
 		}
 		return JSONSerializerWrapper.unwrapFromJSON(unmarshalled);
-	}
-
-	private boolean hasPropertyMark(JSONObject jso)
-	{
-		if (jso != null)
-		{
-			Iterator<String> jsonKeysIte = jso.keys();
-			while (jsonKeysIte.hasNext())
-			{
-				String jsonKey = jsonKeysIte.next();
-				if (jsonKey.startsWith(PROPERTY_MARK))
-				{
-					return true;
-				}
-			}
-		}
-		return false;
 	}
 }
